commit bilingual contents

--- a/docs/docs-ref-autogen/excel/excel.interfaces.applicationdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.applicationdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.ApplicationData
-    summary: <span data-ttu-id="8ef16-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="8ef16-101">An interface describing the data returned by calling "application.toJSON()".</span></span>
+    summary: <span data-ttu-id="ac7a1-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="ac7a1-101">An interface describing the data returned by calling "application.toJSON()".</span></span>
     name: Excel.Interfaces.ApplicationData
     fullName: Excel.Interfaces.ApplicationData
     langs:
@@ -15,10 +15,9 @@ items:
       - excel.Excel.Interfaces.ApplicationData.iterativeCalculation
   - uid: excel.Excel.Interfaces.ApplicationData.calculationEngineVersion
     summary: |-
-      <span data-ttu-id="8ef16-102">返回有关工作簿最近一次完全重新计算所使用的 Excel 计算引擎的版本号。</span><span class="sxs-lookup"><span data-stu-id="8ef16-102">Returns a number about the version of Excel Calculation Engine that the workbook was last fully recalculated by.</span></span> <span data-ttu-id="8ef16-103">只读。</span><span class="sxs-lookup"><span data-stu-id="8ef16-103">Read-only.</span></span>
+      <span data-ttu-id="ac7a1-102">返回用于上次完全重新计算的 Excel 计算引擎版本。</span><span class="sxs-lookup"><span data-stu-id="ac7a1-102">Returns the Excel calculation engine version used for the last full recalculation.</span></span> <span data-ttu-id="ac7a1-103">只读。</span><span class="sxs-lookup"><span data-stu-id="ac7a1-103">Read-only.</span></span>
 
-      <span data-ttu-id="8ef16-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8ef16-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="ac7a1-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ac7a1-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: calculationEngineVersion
     fullName: calculationEngineVersion
     langs:
@@ -31,9 +30,9 @@ items:
           - number
   - uid: excel.Excel.Interfaces.ApplicationData.calculationMode
     summary: |-
-      <span data-ttu-id="8ef16-105">返回工作簿中使用的计算模式, 如 CalculationMode 中的常量所定义。</span><span class="sxs-lookup"><span data-stu-id="8ef16-105">Returns the calculation mode used in the workbook, as defined by the constants in Excel.CalculationMode.</span></span> <span data-ttu-id="8ef16-106">可能的值包括:`Automatic`</span><span class="sxs-lookup"><span data-stu-id="8ef16-106">Possible values are: `Automatic`</span></span><!-- --><span data-ttu-id="8ef16-107">, Excel 控制重新计算的位置;`AutomaticExceptTables`</span><span class="sxs-lookup"><span data-stu-id="8ef16-107">, where Excel controls recalculation; `AutomaticExceptTables`</span></span><!-- --><span data-ttu-id="8ef16-108">, Excel 在其中控制重新计算, 但忽略表中的更改。`Manual`</span><span class="sxs-lookup"><span data-stu-id="8ef16-108">, where Excel controls recalculation but ignores changes in tables; `Manual`</span></span><!-- --><span data-ttu-id="8ef16-109">, 在用户请求计算时完成计算。</span><span class="sxs-lookup"><span data-stu-id="8ef16-109">, where calculation is done when the user requests it.</span></span>
+      <span data-ttu-id="ac7a1-105">返回工作簿中使用的计算模式, 如 CalculationMode 中的常量所定义。</span><span class="sxs-lookup"><span data-stu-id="ac7a1-105">Returns the calculation mode used in the workbook, as defined by the constants in Excel.CalculationMode.</span></span> <span data-ttu-id="ac7a1-106">可能的值包括:`Automatic`</span><span class="sxs-lookup"><span data-stu-id="ac7a1-106">Possible values are: `Automatic`</span></span><!-- --><span data-ttu-id="ac7a1-107">, Excel 控制重新计算的位置;`AutomaticExceptTables`</span><span class="sxs-lookup"><span data-stu-id="ac7a1-107">, where Excel controls recalculation; `AutomaticExceptTables`</span></span><!-- --><span data-ttu-id="ac7a1-108">, Excel 在其中控制重新计算, 但忽略表中的更改。`Manual`</span><span class="sxs-lookup"><span data-stu-id="ac7a1-108">, where Excel controls recalculation but ignores changes in tables; `Manual`</span></span><!-- --><span data-ttu-id="ac7a1-109">, 在用户请求计算时完成计算。</span><span class="sxs-lookup"><span data-stu-id="ac7a1-109">, where calculation is done when the user requests it.</span></span>
 
-      <span data-ttu-id="8ef16-110">\[[API 集: ExcelApi 1.1 for get, 1.8 (用于设置)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8ef16-110">\[ [API set: ExcelApi 1.1 for get, 1.8 for set](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="ac7a1-110">\[[API 集: ExcelApi 1.1 for get, 1.8 (用于设置)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ac7a1-110">\[ [API set: ExcelApi 1.1 for get, 1.8 for set](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: calculationMode
     fullName: calculationMode
     langs:
@@ -46,10 +45,9 @@ items:
           - Excel.CalculationMode | "Automatic" | "AutomaticExceptTables" | "Manual"
   - uid: excel.Excel.Interfaces.ApplicationData.calculationState
     summary: |-
-      <span data-ttu-id="8ef16-111">返回用于指示应用程序的计算状态的 CalculationState。</span><span class="sxs-lookup"><span data-stu-id="8ef16-111">Returns a CalculationState that indicates the calculation state of the application.</span></span> <span data-ttu-id="8ef16-112">有关详细信息，请参阅 Excel.CalculationState。</span><span class="sxs-lookup"><span data-stu-id="8ef16-112">See Excel.CalculationState for details.</span></span> <span data-ttu-id="8ef16-113">只读。</span><span class="sxs-lookup"><span data-stu-id="8ef16-113">Read-only.</span></span>
+      <span data-ttu-id="ac7a1-111">返回应用程序的计算状态。</span><span class="sxs-lookup"><span data-stu-id="ac7a1-111">Returns the calculation state of the application.</span></span> <span data-ttu-id="ac7a1-112">有关详细信息，请参阅 Excel.CalculationState。</span><span class="sxs-lookup"><span data-stu-id="ac7a1-112">See Excel.CalculationState for details.</span></span> <span data-ttu-id="ac7a1-113">只读。</span><span class="sxs-lookup"><span data-stu-id="ac7a1-113">Read-only.</span></span>
 
-      <span data-ttu-id="8ef16-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8ef16-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="ac7a1-114">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ac7a1-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: calculationState
     fullName: calculationState
     langs:
@@ -62,10 +60,9 @@ items:
           - Excel.CalculationState | "Done" | "Calculating" | "Pending"
   - uid: excel.Excel.Interfaces.ApplicationData.iterativeCalculation
     summary: |-
-      <span data-ttu-id="8ef16-115">返回“迭代计算”设置。</span><span class="sxs-lookup"><span data-stu-id="8ef16-115">Returns the Iterative Calculation settings.</span></span> <span data-ttu-id="8ef16-116">在 excel for Windows 和 excel for Mac 上, 这些设置将应用于 excel 应用程序。</span><span class="sxs-lookup"><span data-stu-id="8ef16-116">On Excel for Windows and Excel for Mac, the settings will apply to the Excel Application.</span></span> <span data-ttu-id="8ef16-117">在 excel Online 和 excel 中, 对于其他平台, 这些设置将应用于活动工作簿。</span><span class="sxs-lookup"><span data-stu-id="8ef16-117">On Excel Online and Excel for other platforms, the settings will apply to the active workbook.</span></span>
+      <span data-ttu-id="ac7a1-115">返回“迭代计算”设置。</span><span class="sxs-lookup"><span data-stu-id="ac7a1-115">Returns the Iterative Calculation settings.</span></span> <span data-ttu-id="ac7a1-116">在 Excel for Windows 和 Excel for Mac 上, 这些设置将应用于 Excel 应用程序。</span><span class="sxs-lookup"><span data-stu-id="ac7a1-116">On Excel for Windows and Excel for Mac, the settings will apply to the Excel Application.</span></span> <span data-ttu-id="ac7a1-117">在 Excel Online 和 Excel 中, 对于其他平台, 这些设置将应用于活动工作簿。</span><span class="sxs-lookup"><span data-stu-id="ac7a1-117">On Excel Online and Excel for other platforms, the settings will apply to the active workbook.</span></span>
 
-      <span data-ttu-id="8ef16-118">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8ef16-118">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="ac7a1-118">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ac7a1-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: iterativeCalculation
     fullName: iterativeCalculation
     langs:
