--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.lineupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.lineupdatedata.yml
@@ -1,10 +1,123 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel_release.Excel.Interfaces.LineUpdateData
-    summary: '<span data-ttu-id="1ff09-101">一个用于更新 line 对象上的数据的接口, 可用于 "line. set (</span><span class="sxs-lookup"><span data-stu-id="1ff09-101">An interface for updating data on the Line object, for use in "line.set(</span></span><!-- --><span data-ttu-id="1ff09-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="1ff09-102"></span></span><!-- --><span data-ttu-id="1ff09-103">)".</span><span class="sxs-lookup"><span data-stu-id="1ff09-103"></span></span>'
+    summary: '<span data-ttu-id="d6d47-101">一个用于更新 Line 对象上的数据的接口, 可用于 "line。 set (</span><span class="sxs-lookup"><span data-stu-id="d6d47-101">An interface for updating data on the Line object, for use in "line.set(</span></span><!-- --><span data-ttu-id="d6d47-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="d6d47-102"></span></span><!-- --><span data-ttu-id="d6d47-103">)".</span><span class="sxs-lookup"><span data-stu-id="d6d47-103"></span></span>'
     name: Excel.Interfaces.LineUpdateData
     fullName: Excel.Interfaces.LineUpdateData
     langs:
       - typeScript
     type: interface
     package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.LineUpdateData.beginArrowheadLength
+      - excel_release.Excel.Interfaces.LineUpdateData.beginArrowheadStyle
+      - excel_release.Excel.Interfaces.LineUpdateData.beginArrowheadWidth
+      - excel_release.Excel.Interfaces.LineUpdateData.connectorType
+      - excel_release.Excel.Interfaces.LineUpdateData.endArrowheadLength
+      - excel_release.Excel.Interfaces.LineUpdateData.endArrowheadStyle
+      - excel_release.Excel.Interfaces.LineUpdateData.endArrowheadWidth
+  - uid: excel_release.Excel.Interfaces.LineUpdateData.beginArrowheadLength
+    summary: |-
+      <span data-ttu-id="d6d47-104">表示指定线条始端的箭头长度。</span><span class="sxs-lookup"><span data-stu-id="d6d47-104">Represents the length of the arrowhead at the beginning of the specified line.</span></span>
+
+      <span data-ttu-id="d6d47-105">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6d47-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: beginArrowheadLength
+    fullName: beginArrowheadLength
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'beginArrowheadLength?: Excel.ArrowheadLength | "Short" | "Medium" | "Long";'
+      return:
+        type:
+          - Excel.ArrowheadLength | "Short" | "Medium" | "Long"
+  - uid: excel_release.Excel.Interfaces.LineUpdateData.beginArrowheadStyle
+    summary: |-
+      <span data-ttu-id="d6d47-106">表示指定线条始端的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="d6d47-106">Represents the style of the arrowhead at the beginning of the specified line.</span></span>
+
+      <span data-ttu-id="d6d47-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6d47-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: beginArrowheadStyle
+    fullName: beginArrowheadStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'beginArrowheadStyle?: Excel.ArrowheadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+      return:
+        type:
+          - Excel.ArrowheadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+  - uid: excel_release.Excel.Interfaces.LineUpdateData.beginArrowheadWidth
+    summary: |-
+      <span data-ttu-id="d6d47-108">表示指定线条始端的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="d6d47-108">Represents the width of the arrowhead at the beginning of the specified line.</span></span>
+
+      <span data-ttu-id="d6d47-109">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6d47-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: beginArrowheadWidth
+    fullName: beginArrowheadWidth
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'beginArrowheadWidth?: Excel.ArrowheadWidth | "Narrow" | "Medium" | "Wide";'
+      return:
+        type:
+          - Excel.ArrowheadWidth | "Narrow" | "Medium" | "Wide"
+  - uid: excel_release.Excel.Interfaces.LineUpdateData.connectorType
+    summary: |-
+      <span data-ttu-id="d6d47-110">表示线条的连接器类型。</span><span class="sxs-lookup"><span data-stu-id="d6d47-110">Represents the connector type for the line.</span></span>
+
+      <span data-ttu-id="d6d47-111">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6d47-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: connectorType
+    fullName: connectorType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'connectorType?: Excel.ConnectorType | "Straight" | "Elbow" | "Curve";'
+      return:
+        type:
+          - Excel.ConnectorType | "Straight" | "Elbow" | "Curve"
+  - uid: excel_release.Excel.Interfaces.LineUpdateData.endArrowheadLength
+    summary: |-
+      <span data-ttu-id="d6d47-112">表示指定线条末端的箭头长度。</span><span class="sxs-lookup"><span data-stu-id="d6d47-112">Represents the length of the arrowhead at the end of the specified line.</span></span>
+
+      <span data-ttu-id="d6d47-113">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6d47-113">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: endArrowheadLength
+    fullName: endArrowheadLength
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'endArrowheadLength?: Excel.ArrowheadLength | "Short" | "Medium" | "Long";'
+      return:
+        type:
+          - Excel.ArrowheadLength | "Short" | "Medium" | "Long"
+  - uid: excel_release.Excel.Interfaces.LineUpdateData.endArrowheadStyle
+    summary: |-
+      <span data-ttu-id="d6d47-114">表示指定线条末端的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="d6d47-114">Represents the style of the arrowhead at the end of the specified line.</span></span>
+
+      <span data-ttu-id="d6d47-115">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6d47-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: endArrowheadStyle
+    fullName: endArrowheadStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'endArrowheadStyle?: Excel.ArrowheadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open";'
+      return:
+        type:
+          - Excel.ArrowheadStyle | "None" | "Triangle" | "Stealth" | "Diamond" | "Oval" | "Open"
+  - uid: excel_release.Excel.Interfaces.LineUpdateData.endArrowheadWidth
+    summary: |-
+      <span data-ttu-id="d6d47-116">表示指定线条末端的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="d6d47-116">Represents the width of the arrowhead at the end of the specified line.</span></span>
+
+      <span data-ttu-id="d6d47-117">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d6d47-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: endArrowheadWidth
+    fullName: endArrowheadWidth
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'endArrowheadWidth?: Excel.ArrowheadWidth | "Narrow" | "Medium" | "Wide";'
+      return:
+        type:
+          - Excel.ArrowheadWidth | "Narrow" | "Medium" | "Wide"
