--- a/docs/docs-ref-autogen/excel/excel.arrowheadwidth.yml
+++ b/docs/docs-ref-autogen/excel/excel.arrowheadwidth.yml
@@ -1,8 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.ArrowheadWidth
-    summary: '<span data-ttu-id="e0897-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0897-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
-    isPreview: true
+    summary: '<span data-ttu-id="169e5-101">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="169e5-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
     name: Excel.ArrowheadWidth
     fullName: Excel.ArrowheadWidth
     langs:
@@ -14,7 +13,6 @@ items:
       - excel.Excel.ArrowheadWidth.narrow
       - excel.Excel.ArrowheadWidth.wide
   - uid: excel.Excel.ArrowheadWidth.medium
-    isPreview: true
     name: medium
     fullName: medium
     langs:
@@ -22,7 +20,6 @@ items:
     type: field
     numericValue: '"Medium"'
   - uid: excel.Excel.ArrowheadWidth.narrow
-    isPreview: true
     name: narrow
     fullName: narrow
     langs:
@@ -30,7 +27,6 @@ items:
     type: field
     numericValue: '"Narrow"'
   - uid: excel.Excel.ArrowheadWidth.wide
-    isPreview: true
     name: wide
     fullName: wide
     langs:
