--- a/docs/docs-ref-autogen/excel/excel.autofilltype.yml
+++ b/docs/docs-ref-autogen/excel/excel.autofilltype.yml
@@ -1,8 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.AutoFillType
-    summary: '<span data-ttu-id="ea9e7-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ea9e7-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
-    isPreview: true
+    summary: '<span data-ttu-id="9eb5c-101">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9eb5c-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
     name: Excel.AutoFillType
     fullName: Excel.AutoFillType
     langs:
@@ -23,7 +22,6 @@ items:
       - excel.Excel.AutoFillType.growthTrend
       - excel.Excel.AutoFillType.linearTrend
   - uid: excel.Excel.AutoFillType.fillCopy
-    isPreview: true
     name: fillCopy
     fullName: fillCopy
     langs:
@@ -31,7 +29,6 @@ items:
     type: field
     numericValue: '"FillCopy"'
   - uid: excel.Excel.AutoFillType.fillDays
-    isPreview: true
     name: fillDays
     fullName: fillDays
     langs:
@@ -39,7 +36,6 @@ items:
     type: field
     numericValue: '"FillDays"'
   - uid: excel.Excel.AutoFillType.fillDefault
-    isPreview: true
     name: fillDefault
     fullName: fillDefault
     langs:
@@ -47,7 +43,6 @@ items:
     type: field
     numericValue: '"FillDefault"'
   - uid: excel.Excel.AutoFillType.fillFormats
-    isPreview: true
     name: fillFormats
     fullName: fillFormats
     langs:
@@ -55,7 +50,6 @@ items:
     type: field
     numericValue: '"FillFormats"'
   - uid: excel.Excel.AutoFillType.fillMonths
-    isPreview: true
     name: fillMonths
     fullName: fillMonths
     langs:
@@ -63,7 +57,6 @@ items:
     type: field
     numericValue: '"FillMonths"'
   - uid: excel.Excel.AutoFillType.fillSeries
-    isPreview: true
     name: fillSeries
     fullName: fillSeries
     langs:
@@ -71,7 +64,6 @@ items:
     type: field
     numericValue: '"FillSeries"'
   - uid: excel.Excel.AutoFillType.fillValues
-    isPreview: true
     name: fillValues
     fullName: fillValues
     langs:
@@ -79,7 +71,6 @@ items:
     type: field
     numericValue: '"FillValues"'
   - uid: excel.Excel.AutoFillType.fillWeekdays
-    isPreview: true
     name: fillWeekdays
     fullName: fillWeekdays
     langs:
@@ -87,7 +78,6 @@ items:
     type: field
     numericValue: '"FillWeekdays"'
   - uid: excel.Excel.AutoFillType.fillYears
-    isPreview: true
     name: fillYears
     fullName: fillYears
     langs:
@@ -95,7 +85,6 @@ items:
     type: field
     numericValue: '"FillYears"'
   - uid: excel.Excel.AutoFillType.flashFill
-    isPreview: true
     name: flashFill
     fullName: flashFill
     langs:
@@ -103,7 +92,6 @@ items:
     type: field
     numericValue: '"FlashFill"'
   - uid: excel.Excel.AutoFillType.growthTrend
-    isPreview: true
     name: growthTrend
     fullName: growthTrend
     langs:
@@ -111,7 +99,6 @@ items:
     type: field
     numericValue: '"GrowthTrend"'
   - uid: excel.Excel.AutoFillType.linearTrend
-    isPreview: true
     name: linearTrend
     fullName: linearTrend
     langs:
