--- a/docs/docs-ref-autogen/excel/excel.cellpropertiesfillloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.cellpropertiesfillloadoptions.yml
@@ -2,10 +2,9 @@
 items:
   - uid: excel.Excel.CellPropertiesFillLoadOptions
     summary: |-
-      <span data-ttu-id="e6164-101">指定要在`format.fill`对象上加载的属性。</span><span class="sxs-lookup"><span data-stu-id="e6164-101">Specifies which properties to load on the `format.fill` object.</span></span>
+      <span data-ttu-id="c3126-101">指定要在`format.fill`对象上加载的属性。</span><span class="sxs-lookup"><span data-stu-id="c3126-101">Specifies which properties to load on the `format.fill` object.</span></span>
 
-      <span data-ttu-id="e6164-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e6164-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="c3126-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.CellPropertiesFillLoadOptions
     fullName: Excel.CellPropertiesFillLoadOptions
     langs:
@@ -20,10 +19,9 @@ items:
       - excel.Excel.CellPropertiesFillLoadOptions.tintAndShade
   - uid: excel.Excel.CellPropertiesFillLoadOptions.color
     summary: |-
-      <span data-ttu-id="e6164-103">指定是否在`color`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="e6164-103">Specifies whether to load on the `color` property.</span></span>
+      <span data-ttu-id="c3126-103">指定是否在`color`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="c3126-103">Specifies whether to load on the `color` property.</span></span>
 
-      <span data-ttu-id="e6164-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e6164-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="c3126-104">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -36,10 +34,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFillLoadOptions.pattern
     summary: |-
-      <span data-ttu-id="e6164-105">指定是否在`pattern`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="e6164-105">Specifies whether to load on the `pattern` property.</span></span>
+      <span data-ttu-id="c3126-105">指定是否在`pattern`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="c3126-105">Specifies whether to load on the `pattern` property.</span></span>
 
-      <span data-ttu-id="e6164-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e6164-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="c3126-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: pattern
     fullName: pattern
     langs:
@@ -52,10 +49,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFillLoadOptions.patternColor
     summary: |-
-      <span data-ttu-id="e6164-107">指定是否在`patternColor`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="e6164-107">Specifies whether to load on the `patternColor` property.</span></span>
+      <span data-ttu-id="c3126-107">指定是否在`patternColor`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="c3126-107">Specifies whether to load on the `patternColor` property.</span></span>
 
-      <span data-ttu-id="e6164-108">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e6164-108">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="c3126-108">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: patternColor
     fullName: patternColor
     langs:
@@ -68,10 +64,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFillLoadOptions.patternTintAndShade
     summary: |-
-      <span data-ttu-id="e6164-109">指定是否在`patternTintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="e6164-109">Specifies whether to load on the `patternTintAndShade` property.</span></span>
+      <span data-ttu-id="c3126-109">指定是否在`patternTintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="c3126-109">Specifies whether to load on the `patternTintAndShade` property.</span></span>
 
-      <span data-ttu-id="e6164-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e6164-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="c3126-110">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: patternTintAndShade
     fullName: patternTintAndShade
     langs:
@@ -84,10 +79,9 @@ items:
           - boolean
   - uid: excel.Excel.CellPropertiesFillLoadOptions.tintAndShade
     summary: |-
-      <span data-ttu-id="e6164-111">指定是否在`tintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="e6164-111">Specifies whether to load on the `tintAndShade` property.</span></span>
+      <span data-ttu-id="c3126-111">指定是否在`tintAndShade`属性上进行加载。</span><span class="sxs-lookup"><span data-stu-id="c3126-111">Specifies whether to load on the `tintAndShade` property.</span></span>
 
-      <span data-ttu-id="e6164-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e6164-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="c3126-112">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c3126-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tintAndShade
     fullName: tintAndShade
     langs:
