--- a/docs/docs-ref-autogen/excel/excel.changedeventdetail.yml
+++ b/docs/docs-ref-autogen/excel/excel.changedeventdetail.yml
@@ -2,10 +2,9 @@
 items:
   - uid: excel.Excel.ChangedEventDetail
     summary: |-
-      <span data-ttu-id="c6946-101">提供有关 WorksheetChangedEvent/TableChangedEvent 的详细信息</span><span class="sxs-lookup"><span data-stu-id="c6946-101">Provide information about the detail of WorksheetChangedEvent/TableChangedEvent</span></span>
+      <span data-ttu-id="a4a45-101">提供有关 WorksheetChangedEvent/TableChangedEvent 的详细信息</span><span class="sxs-lookup"><span data-stu-id="a4a45-101">Provide information about the detail of WorksheetChangedEvent/TableChangedEvent</span></span>
 
-      <span data-ttu-id="c6946-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c6946-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="a4a45-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a4a45-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.ChangedEventDetail
     fullName: Excel.ChangedEventDetail
     langs:
@@ -19,10 +18,9 @@ items:
       - excel.Excel.ChangedEventDetail.valueTypeBefore
   - uid: excel.Excel.ChangedEventDetail.valueAfter
     summary: |-
-      <span data-ttu-id="c6946-103">表示更改之后的值。</span><span class="sxs-lookup"><span data-stu-id="c6946-103">Represents the value after changed.</span></span> <span data-ttu-id="c6946-104">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="c6946-104">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="c6946-105">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="c6946-105">Cells that contain an error will return the error string.</span></span>
+      <span data-ttu-id="a4a45-103">表示更改之后的值。</span><span class="sxs-lookup"><span data-stu-id="a4a45-103">Represents the value after changed.</span></span> <span data-ttu-id="a4a45-104">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="a4a45-104">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="a4a45-105">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="a4a45-105">Cells that contain an error will return the error string.</span></span>
 
-      <span data-ttu-id="c6946-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c6946-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="a4a45-106">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a4a45-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: valueAfter
     fullName: valueAfter
     langs:
@@ -35,10 +33,9 @@ items:
           - any
   - uid: excel.Excel.ChangedEventDetail.valueBefore
     summary: |-
-      <span data-ttu-id="c6946-107">表示更改之前的值。</span><span class="sxs-lookup"><span data-stu-id="c6946-107">Represents the value before changed.</span></span> <span data-ttu-id="c6946-108">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="c6946-108">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="c6946-109">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="c6946-109">Cells that contain an error will return the error string.</span></span>
+      <span data-ttu-id="a4a45-107">表示更改之前的值。</span><span class="sxs-lookup"><span data-stu-id="a4a45-107">Represents the value before changed.</span></span> <span data-ttu-id="a4a45-108">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="a4a45-108">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="a4a45-109">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="a4a45-109">Cells that contain an error will return the error string.</span></span>
 
-      <span data-ttu-id="c6946-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c6946-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="a4a45-110">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a4a45-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: valueBefore
     fullName: valueBefore
     langs:
@@ -51,10 +48,9 @@ items:
           - any
   - uid: excel.Excel.ChangedEventDetail.valueTypeAfter
     summary: |-
-      <span data-ttu-id="c6946-111">表示更改之后的值类型。</span><span class="sxs-lookup"><span data-stu-id="c6946-111">Represents the type of value after changed</span></span>
+      <span data-ttu-id="a4a45-111">表示更改之后的值类型。</span><span class="sxs-lookup"><span data-stu-id="a4a45-111">Represents the type of value after changed</span></span>
 
-      <span data-ttu-id="c6946-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c6946-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="a4a45-112">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a4a45-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: valueTypeAfter
     fullName: valueTypeAfter
     langs:
@@ -67,10 +63,9 @@ items:
           - Excel.RangeValueType | "Unknown" | "Empty" | "String" | "Integer" | "Double" | "Boolean" | "Error" | "RichValue"
   - uid: excel.Excel.ChangedEventDetail.valueTypeBefore
     summary: |-
-      <span data-ttu-id="c6946-113">表示更改之前的值类型。</span><span class="sxs-lookup"><span data-stu-id="c6946-113">Represents the type of value before changed</span></span>
+      <span data-ttu-id="a4a45-113">表示更改之前的值类型。</span><span class="sxs-lookup"><span data-stu-id="a4a45-113">Represents the type of value before changed</span></span>
 
-      <span data-ttu-id="c6946-114">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c6946-114">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="a4a45-114">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a4a45-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: valueTypeBefore
     fullName: valueTypeBefore
     langs:
