--- a/docs/docs-ref-autogen/excel/excel.papertype.yml
+++ b/docs/docs-ref-autogen/excel/excel.papertype.yml
@@ -1,8 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.PaperType
-    summary: '<span data-ttu-id="281ee-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="281ee-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
-    isPreview: true
+    summary: '<span data-ttu-id="237c6-101">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="237c6-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
     name: Excel.PaperType
     fullName: Excel.PaperType
     langs:
@@ -52,7 +51,6 @@ items:
       - excel.Excel.PaperType.statement
       - excel.Excel.PaperType.tabloid
   - uid: excel.Excel.PaperType.a3
-    isPreview: true
     name: a3
     fullName: a3
     langs:
@@ -60,7 +58,6 @@ items:
     type: field
     numericValue: '"A3"'
   - uid: excel.Excel.PaperType.a4
-    isPreview: true
     name: a4
     fullName: a4
     langs:
@@ -68,7 +65,6 @@ items:
     type: field
     numericValue: '"A4"'
   - uid: excel.Excel.PaperType.a4Small
-    isPreview: true
     name: a4Small
     fullName: a4Small
     langs:
@@ -76,7 +72,6 @@ items:
     type: field
     numericValue: '"A4Small"'
   - uid: excel.Excel.PaperType.a5
-    isPreview: true
     name: a5
     fullName: a5
     langs:
@@ -84,7 +79,6 @@ items:
     type: field
     numericValue: '"A5"'
   - uid: excel.Excel.PaperType.b4
-    isPreview: true
     name: b4
     fullName: b4
     langs:
@@ -92,7 +86,6 @@ items:
     type: field
     numericValue: '"B4"'
   - uid: excel.Excel.PaperType.b5
-    isPreview: true
     name: b5
     fullName: b5
     langs:
@@ -100,7 +93,6 @@ items:
     type: field
     numericValue: '"B5"'
   - uid: excel.Excel.PaperType.csheet
-    isPreview: true
     name: csheet
     fullName: csheet
     langs:
@@ -108,7 +100,6 @@ items:
     type: field
     numericValue: '"Csheet"'
   - uid: excel.Excel.PaperType.dsheet
-    isPreview: true
     name: dsheet
     fullName: dsheet
     langs:
@@ -116,7 +107,6 @@ items:
     type: field
     numericValue: '"Dsheet"'
   - uid: excel.Excel.PaperType.envelope10
-    isPreview: true
     name: envelope10
     fullName: envelope10
     langs:
@@ -124,7 +114,6 @@ items:
     type: field
     numericValue: '"Envelope10"'
   - uid: excel.Excel.PaperType.envelope11
-    isPreview: true
     name: envelope11
     fullName: envelope11
     langs:
@@ -132,7 +121,6 @@ items:
     type: field
     numericValue: '"Envelope11"'
   - uid: excel.Excel.PaperType.envelope12
-    isPreview: true
     name: envelope12
     fullName: envelope12
     langs:
@@ -140,7 +128,6 @@ items:
     type: field
     numericValue: '"Envelope12"'
   - uid: excel.Excel.PaperType.envelope14
-    isPreview: true
     name: envelope14
     fullName: envelope14
     langs:
@@ -148,7 +135,6 @@ items:
     type: field
     numericValue: '"Envelope14"'
   - uid: excel.Excel.PaperType.envelope9
-    isPreview: true
     name: envelope9
     fullName: envelope9
     langs:
@@ -156,7 +142,6 @@ items:
     type: field
     numericValue: '"Envelope9"'
   - uid: excel.Excel.PaperType.envelopeB4
-    isPreview: true
     name: envelopeB4
     fullName: envelopeB4
     langs:
@@ -164,7 +149,6 @@ items:
     type: field
     numericValue: '"EnvelopeB4"'
   - uid: excel.Excel.PaperType.envelopeB5
-    isPreview: true
     name: envelopeB5
     fullName: envelopeB5
     langs:
@@ -172,7 +156,6 @@ items:
     type: field
     numericValue: '"EnvelopeB5"'
   - uid: excel.Excel.PaperType.envelopeB6
-    isPreview: true
     name: envelopeB6
     fullName: envelopeB6
     langs:
@@ -180,7 +163,6 @@ items:
     type: field
     numericValue: '"EnvelopeB6"'
   - uid: excel.Excel.PaperType.envelopeC3
-    isPreview: true
     name: envelopeC3
     fullName: envelopeC3
     langs:
@@ -188,7 +170,6 @@ items:
     type: field
     numericValue: '"EnvelopeC3"'
   - uid: excel.Excel.PaperType.envelopeC4
-    isPreview: true
     name: envelopeC4
     fullName: envelopeC4
     langs:
@@ -196,7 +177,6 @@ items:
     type: field
     numericValue: '"EnvelopeC4"'
   - uid: excel.Excel.PaperType.envelopeC5
-    isPreview: true
     name: envelopeC5
     fullName: envelopeC5
     langs:
@@ -204,7 +184,6 @@ items:
     type: field
     numericValue: '"EnvelopeC5"'
   - uid: excel.Excel.PaperType.envelopeC6
-    isPreview: true
     name: envelopeC6
     fullName: envelopeC6
     langs:
@@ -212,7 +191,6 @@ items:
     type: field
     numericValue: '"EnvelopeC6"'
   - uid: excel.Excel.PaperType.envelopeC65
-    isPreview: true
     name: envelopeC65
     fullName: envelopeC65
     langs:
@@ -220,7 +198,6 @@ items:
     type: field
     numericValue: '"EnvelopeC65"'
   - uid: excel.Excel.PaperType.envelopeDL
-    isPreview: true
     name: envelopeDL
     fullName: envelopeDL
     langs:
@@ -228,7 +205,6 @@ items:
     type: field
     numericValue: '"EnvelopeDL"'
   - uid: excel.Excel.PaperType.envelopeItaly
-    isPreview: true
     name: envelopeItaly
     fullName: envelopeItaly
     langs:
@@ -236,7 +212,6 @@ items:
     type: field
     numericValue: '"EnvelopeItaly"'
   - uid: excel.Excel.PaperType.envelopeMonarch
-    isPreview: true
     name: envelopeMonarch
     fullName: envelopeMonarch
     langs:
@@ -244,7 +219,6 @@ items:
     type: field
     numericValue: '"EnvelopeMonarch"'
   - uid: excel.Excel.PaperType.envelopePersonal
-    isPreview: true
     name: envelopePersonal
     fullName: envelopePersonal
     langs:
@@ -252,7 +226,6 @@ items:
     type: field
     numericValue: '"EnvelopePersonal"'
   - uid: excel.Excel.PaperType.esheet
-    isPreview: true
     name: esheet
     fullName: esheet
     langs:
@@ -260,7 +233,6 @@ items:
     type: field
     numericValue: '"Esheet"'
   - uid: excel.Excel.PaperType.executive
-    isPreview: true
     name: executive
     fullName: executive
     langs:
@@ -268,7 +240,6 @@ items:
     type: field
     numericValue: '"Executive"'
   - uid: excel.Excel.PaperType.fanfoldLegalGerman
-    isPreview: true
     name: fanfoldLegalGerman
     fullName: fanfoldLegalGerman
     langs:
@@ -276,7 +247,6 @@ items:
     type: field
     numericValue: '"FanfoldLegalGerman"'
   - uid: excel.Excel.PaperType.fanfoldStdGerman
-    isPreview: true
     name: fanfoldStdGerman
     fullName: fanfoldStdGerman
     langs:
@@ -284,7 +254,6 @@ items:
     type: field
     numericValue: '"FanfoldStdGerman"'
   - uid: excel.Excel.PaperType.fanfoldUS
-    isPreview: true
     name: fanfoldUS
     fullName: fanfoldUS
     langs:
@@ -292,7 +261,6 @@ items:
     type: field
     numericValue: '"FanfoldUS"'
   - uid: excel.Excel.PaperType.folio
-    isPreview: true
     name: folio
     fullName: folio
     langs:
@@ -300,7 +268,6 @@ items:
     type: field
     numericValue: '"Folio"'
   - uid: excel.Excel.PaperType.ledger
-    isPreview: true
     name: ledger
     fullName: ledger
     langs:
@@ -308,7 +275,6 @@ items:
     type: field
     numericValue: '"Ledger"'
   - uid: excel.Excel.PaperType.legal
-    isPreview: true
     name: legal
     fullName: legal
     langs:
@@ -316,7 +282,6 @@ items:
     type: field
     numericValue: '"Legal"'
   - uid: excel.Excel.PaperType.letter
-    isPreview: true
     name: letter
     fullName: letter
     langs:
@@ -324,7 +289,6 @@ items:
     type: field
     numericValue: '"Letter"'
   - uid: excel.Excel.PaperType.letterSmall
-    isPreview: true
     name: letterSmall
     fullName: letterSmall
     langs:
@@ -332,7 +296,6 @@ items:
     type: field
     numericValue: '"LetterSmall"'
   - uid: excel.Excel.PaperType.note
-    isPreview: true
     name: note
     fullName: note
     langs:
@@ -340,7 +303,6 @@ items:
     type: field
     numericValue: '"Note"'
   - uid: excel.Excel.PaperType.paper10x14
-    isPreview: true
     name: paper10x14
     fullName: paper10x14
     langs:
@@ -348,7 +310,6 @@ items:
     type: field
     numericValue: '"Paper10x14"'
   - uid: excel.Excel.PaperType.paper11x17
-    isPreview: true
     name: paper11x17
     fullName: paper11x17
     langs:
@@ -356,7 +317,6 @@ items:
     type: field
     numericValue: '"Paper11x17"'
   - uid: excel.Excel.PaperType.quatro
-    isPreview: true
     name: quatro
     fullName: quatro
     langs:
@@ -364,7 +324,6 @@ items:
     type: field
     numericValue: '"Quatro"'
   - uid: excel.Excel.PaperType.statement
-    isPreview: true
     name: statement
     fullName: statement
     langs:
@@ -372,7 +331,6 @@ items:
     type: field
     numericValue: '"Statement"'
   - uid: excel.Excel.PaperType.tabloid
-    isPreview: true
     name: tabloid
     fullName: tabloid
     langs:
