--- a/docs/docs-ref-autogen/excel/excel.rangecopytype.yml
+++ b/docs/docs-ref-autogen/excel/excel.rangecopytype.yml
@@ -1,8 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.RangeCopyType
-    summary: '<span data-ttu-id="894cd-101">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="894cd-101">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
-    isPreview: true
+    summary: '<span data-ttu-id="0ddaa-101">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0ddaa-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
     name: Excel.RangeCopyType
     fullName: Excel.RangeCopyType
     langs:
@@ -15,7 +14,6 @@ items:
       - excel.Excel.RangeCopyType.formulas
       - excel.Excel.RangeCopyType.values
   - uid: excel.Excel.RangeCopyType.all
-    isPreview: true
     name: all
     fullName: all
     langs:
@@ -23,7 +21,6 @@ items:
     type: field
     numericValue: '"All"'
   - uid: excel.Excel.RangeCopyType.formats
-    isPreview: true
     name: formats
     fullName: formats
     langs:
@@ -31,7 +28,6 @@ items:
     type: field
     numericValue: '"Formats"'
   - uid: excel.Excel.RangeCopyType.formulas
-    isPreview: true
     name: formulas
     fullName: formulas
     langs:
@@ -39,7 +35,6 @@ items:
     type: field
     numericValue: '"Formulas"'
   - uid: excel.Excel.RangeCopyType.values
-    isPreview: true
     name: values
     fullName: values
     langs:
