--- a/docs/docs-ref-autogen/excel/excel.shapelinestyle.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapelinestyle.yml
@@ -2,10 +2,9 @@
 items:
   - uid: excel.Excel.ShapeLineStyle
     summary: |-
-      <span data-ttu-id="4ff47-101">线条的样式。</span><span class="sxs-lookup"><span data-stu-id="4ff47-101">The style for a line.</span></span>
+      <span data-ttu-id="d0ae9-101">线条的样式。</span><span class="sxs-lookup"><span data-stu-id="d0ae9-101">The style for a line.</span></span>
 
-      <span data-ttu-id="4ff47-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4ff47-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="d0ae9-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d0ae9-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.ShapeLineStyle
     fullName: Excel.ShapeLineStyle
     langs:
@@ -19,8 +18,7 @@ items:
       - excel.Excel.ShapeLineStyle.thinThick
       - excel.Excel.ShapeLineStyle.thinThin
   - uid: excel.Excel.ShapeLineStyle.single
-    summary: <span data-ttu-id="4ff47-103">单线。</span><span class="sxs-lookup"><span data-stu-id="4ff47-103">Single line.</span></span>
-    isPreview: true
+    summary: <span data-ttu-id="d0ae9-103">单线。</span><span class="sxs-lookup"><span data-stu-id="d0ae9-103">Single line.</span></span>
     name: single
     fullName: single
     langs:
@@ -28,8 +26,7 @@ items:
     type: field
     numericValue: '"Single"'
   - uid: excel.Excel.ShapeLineStyle.thickBetweenThin
-    summary: <span data-ttu-id="4ff47-104">粗线每一侧各带一条细线。</span><span class="sxs-lookup"><span data-stu-id="4ff47-104">Thick line with a thin line on each side.</span></span>
-    isPreview: true
+    summary: <span data-ttu-id="d0ae9-104">粗线每一侧各带一条细线。</span><span class="sxs-lookup"><span data-stu-id="d0ae9-104">Thick line with a thin line on each side.</span></span>
     name: thickBetweenThin
     fullName: thickBetweenThin
     langs:
@@ -37,8 +34,7 @@ items:
     type: field
     numericValue: '"ThickBetweenThin"'
   - uid: excel.Excel.ShapeLineStyle.thickThin
-    summary: '<span data-ttu-id="4ff47-105">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="4ff47-105">Thick line next to thin line.</span></span> <span data-ttu-id="4ff47-106">对于水平线, 粗线位于细线上方。</span><span class="sxs-lookup"><span data-stu-id="4ff47-106">For horizontal lines, the thick line is above the thin line.</span></span> <span data-ttu-id="4ff47-107">对于垂直线, 粗线位于细线的左侧。</span><span class="sxs-lookup"><span data-stu-id="4ff47-107">For vertical lines, the thick line is to the left of the thin line.</span></span>'
-    isPreview: true
+    summary: '<span data-ttu-id="d0ae9-105">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="d0ae9-105">Thick line next to thin line.</span></span> <span data-ttu-id="d0ae9-106">对于水平线, 粗线位于细线上方。</span><span class="sxs-lookup"><span data-stu-id="d0ae9-106">For horizontal lines, the thick line is above the thin line.</span></span> <span data-ttu-id="d0ae9-107">对于垂直线, 粗线位于细线的左侧。</span><span class="sxs-lookup"><span data-stu-id="d0ae9-107">For vertical lines, the thick line is to the left of the thin line.</span></span>'
     name: thickThin
     fullName: thickThin
     langs:
@@ -46,8 +42,7 @@ items:
     type: field
     numericValue: '"ThickThin"'
   - uid: excel.Excel.ShapeLineStyle.thinThick
-    summary: '<span data-ttu-id="4ff47-108">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="4ff47-108">Thick line next to thin line.</span></span> <span data-ttu-id="4ff47-109">对于水平线, 粗线位于细线下方。</span><span class="sxs-lookup"><span data-stu-id="4ff47-109">For horizontal lines, the thick line is below the thin line.</span></span> <span data-ttu-id="4ff47-110">对于垂直线条, 粗线位于细线的右侧。</span><span class="sxs-lookup"><span data-stu-id="4ff47-110">For vertical lines, the thick line is to the right of the thin line.</span></span>'
-    isPreview: true
+    summary: '<span data-ttu-id="d0ae9-108">粗线位于细线旁边。</span><span class="sxs-lookup"><span data-stu-id="d0ae9-108">Thick line next to thin line.</span></span> <span data-ttu-id="d0ae9-109">对于水平线, 粗线位于细线下方。</span><span class="sxs-lookup"><span data-stu-id="d0ae9-109">For horizontal lines, the thick line is below the thin line.</span></span> <span data-ttu-id="d0ae9-110">对于垂直线条, 粗线位于细线的右侧。</span><span class="sxs-lookup"><span data-stu-id="d0ae9-110">For vertical lines, the thick line is to the right of the thin line.</span></span>'
     name: thinThick
     fullName: thinThick
     langs:
@@ -55,8 +50,7 @@ items:
     type: field
     numericValue: '"ThinThick"'
   - uid: excel.Excel.ShapeLineStyle.thinThin
-    summary: <span data-ttu-id="4ff47-111">双细线。</span><span class="sxs-lookup"><span data-stu-id="4ff47-111">Two thin lines.</span></span>
-    isPreview: true
+    summary: <span data-ttu-id="d0ae9-111">双细线。</span><span class="sxs-lookup"><span data-stu-id="d0ae9-111">Two thin lines.</span></span>
     name: thinThin
     fullName: thinThin
     langs:
