--- a/docs/docs-ref-autogen/excel/excel.tableaddedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.tableaddedeventargs.yml
@@ -2,10 +2,9 @@
 items:
   - uid: excel.Excel.TableAddedEventArgs
     summary: |-
-      <span data-ttu-id="ad8bc-101">提供有关引发了 OnAdded 事件的表的信息。</span><span class="sxs-lookup"><span data-stu-id="ad8bc-101">Provides information about the table that raised the OnAdded event.</span></span>
+      <span data-ttu-id="9e4f9-101">提供有关引发了 OnAdded 事件的表的信息。</span><span class="sxs-lookup"><span data-stu-id="9e4f9-101">Provides information about the table that raised the OnAdded event.</span></span>
 
-      <span data-ttu-id="ad8bc-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ad8bc-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="9e4f9-102">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e4f9-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.TableAddedEventArgs
     fullName: Excel.TableAddedEventArgs
     langs:
@@ -19,10 +18,9 @@ items:
       - excel.Excel.TableAddedEventArgs.worksheetId
   - uid: excel.Excel.TableAddedEventArgs.source
     summary: |-
-      <span data-ttu-id="ad8bc-103">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="ad8bc-103">Gets the source of the event.</span></span> <span data-ttu-id="ad8bc-104">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="ad8bc-104">See Excel.EventSource for details.</span></span>
+      <span data-ttu-id="9e4f9-103">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="9e4f9-103">Gets the source of the event.</span></span> <span data-ttu-id="9e4f9-104">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="9e4f9-104">See Excel.EventSource for details.</span></span>
 
-      <span data-ttu-id="ad8bc-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ad8bc-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="9e4f9-105">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e4f9-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: source
     fullName: source
     langs:
@@ -35,10 +33,9 @@ items:
           - Excel.EventSource | "Local" | "Remote"
   - uid: excel.Excel.TableAddedEventArgs.tableId
     summary: |-
-      <span data-ttu-id="ad8bc-106">获取已添加的表格的 ID。</span><span class="sxs-lookup"><span data-stu-id="ad8bc-106">Gets the id of the table that is added.</span></span>
+      <span data-ttu-id="9e4f9-106">获取已添加的表格的 ID。</span><span class="sxs-lookup"><span data-stu-id="9e4f9-106">Gets the id of the table that is added.</span></span>
 
-      <span data-ttu-id="ad8bc-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ad8bc-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="9e4f9-107">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e4f9-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: tableId
     fullName: tableId
     langs:
@@ -51,10 +48,9 @@ items:
           - string
   - uid: excel.Excel.TableAddedEventArgs.type
     summary: |-
-      <span data-ttu-id="ad8bc-108">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="ad8bc-108">Gets the type of the event.</span></span> <span data-ttu-id="ad8bc-109">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="ad8bc-109">See Excel.EventType for details.</span></span>
+      <span data-ttu-id="9e4f9-108">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="9e4f9-108">Gets the type of the event.</span></span> <span data-ttu-id="9e4f9-109">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="9e4f9-109">See Excel.EventType for details.</span></span>
 
-      <span data-ttu-id="ad8bc-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ad8bc-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="9e4f9-110">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e4f9-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: type
     fullName: type
     langs:
@@ -67,10 +63,9 @@ items:
           - '"TableAdded"'
   - uid: excel.Excel.TableAddedEventArgs.worksheetId
     summary: |-
-      <span data-ttu-id="ad8bc-111">获取已在其中添加表格的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="ad8bc-111">Gets the id of the worksheet in which the table is added.</span></span>
+      <span data-ttu-id="9e4f9-111">获取已在其中添加表格的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="9e4f9-111">Gets the id of the worksheet in which the table is added.</span></span>
 
-      <span data-ttu-id="ad8bc-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ad8bc-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-    isPreview: true
+      <span data-ttu-id="9e4f9-112">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e4f9-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: worksheetId
     fullName: worksheetId
     langs:
