--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.removeduplicatesresultdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.removeduplicatesresultdata.yml
@@ -1,10 +1,43 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel_release.Excel.Interfaces.RemoveDuplicatesResultData
-    summary: <span data-ttu-id="7a736-101">描述通过调用 "removeDuplicatesResult ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="7a736-101">An interface describing the data returned by calling "removeDuplicatesResult.toJSON()".</span></span>
+    summary: <span data-ttu-id="936f5-101">描述通过调用 "removeDuplicatesResult ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="936f5-101">An interface describing the data returned by calling "removeDuplicatesResult.toJSON()".</span></span>
     name: Excel.Interfaces.RemoveDuplicatesResultData
     fullName: Excel.Interfaces.RemoveDuplicatesResultData
     langs:
       - typeScript
     type: interface
     package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.RemoveDuplicatesResultData.removed
+      - excel_release.Excel.Interfaces.RemoveDuplicatesResultData.uniqueRemaining
+  - uid: excel_release.Excel.Interfaces.RemoveDuplicatesResultData.removed
+    summary: |-
+      <span data-ttu-id="936f5-102">由操作删除的重复行数。</span><span class="sxs-lookup"><span data-stu-id="936f5-102">Number of duplicated rows removed by the operation.</span></span>
+
+      <span data-ttu-id="936f5-103">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="936f5-103">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: removed
+    fullName: removed
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'removed?: number;'
+      return:
+        type:
+          - number
+  - uid: excel_release.Excel.Interfaces.RemoveDuplicatesResultData.uniqueRemaining
+    summary: |-
+      <span data-ttu-id="936f5-104">所生成的区域中存在的剩余唯一行数。</span><span class="sxs-lookup"><span data-stu-id="936f5-104">Number of remaining unique rows present in the resulting range.</span></span>
+
+      <span data-ttu-id="936f5-105">\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="936f5-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: uniqueRemaining
+    fullName: uniqueRemaining
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'uniqueRemaining?: number;'
+      return:
+        type:
+          - number
