commit translated contents

--- a/docs/docs-ref-autogen/toc.yml
+++ b/docs/docs-ref-autogen/toc.yml
@@ -24,8 +24,6 @@ items:
               - name: Office 运行时
                 uid: office-runtime
                 items:
-                  - name: 到 asyncstorage
-                    uid: office-runtime.OfficeRuntime.AsyncStorage
                   - name: Dialog
                     uid: office-runtime.OfficeRuntime.Dialog
                   - name: DisplayWebDialogOptions
@@ -711,7 +709,7 @@ items:
                 uid: excel.Excel.SearchCriteria
               - name: SelectionChangedEventArgs
                 uid: excel.Excel.SelectionChangedEventArgs
-              - name: Session
+              - name: 会话
                 uid: excel.Excel.Session
               - name: SettableCellProperties
                 uid: excel.Excel.SettableCellProperties
@@ -1506,7 +1504,7 @@ items:
                 uid: excel_release.Excel.SearchCriteria
               - name: SelectionChangedEventArgs
                 uid: excel_release.Excel.SelectionChangedEventArgs
-              - name: Session
+              - name: 会话
                 uid: excel_release.Excel.Session
               - name: SettableCellProperties
                 uid: excel_release.Excel.SettableCellProperties
@@ -1772,7 +1770,7 @@ items:
                 uid: outlook.Office.CategoryDetails
               - name: CoercionTypeOptions
                 uid: outlook.Office.CoercionTypeOptions
-              - name: 联系人
+              - name: Contact
                 uid: outlook.Office.Contact
               - name: CustomProperties
                 uid: outlook.Office.CustomProperties
@@ -1790,7 +1788,7 @@ items:
                 uid: outlook.Office.From
               - name: InternetHeaders
                 uid: outlook.Office.InternetHeaders
-              - name: Item
+              - name: 项目
                 uid: outlook.Office.Item
               - name: LocalClientTime
                 uid: outlook.Office.LocalClientTime
@@ -1814,11 +1812,11 @@ items:
                 uid: outlook.Office.NotificationMessageDetails
               - name: NotificationMessages
                 uid: outlook.Office.NotificationMessages
-              - name: Organizer
+              - name: 组织者
                 uid: outlook.Office.Organizer
               - name: PhoneNumber
                 uid: outlook.Office.PhoneNumber
-              - name: Recipients
+              - name: 收件人
                 uid: outlook.Office.Recipients
               - name: 循环
                 uid: outlook.Office.Recurrence
@@ -1842,7 +1840,7 @@ items:
                 uid: outlook.Office.Subject
               - name: TaskSuggestion
                 uid: outlook.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: outlook.Office.Time
               - name: UserProfile
                 uid: outlook.Office.UserProfile
@@ -1887,7 +1885,7 @@ items:
                 uid: Outlook_1_7.Office.Body
               - name: CoercionTypeOptions
                 uid: Outlook_1_7.Office.CoercionTypeOptions
-              - name: 联系人
+              - name: Contact
                 uid: Outlook_1_7.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_7.Office.CustomProperties
@@ -1901,7 +1899,7 @@ items:
                 uid: Outlook_1_7.Office.Entities
               - name: From
                 uid: Outlook_1_7.Office.From
-              - name: Item
+              - name: 项目
                 uid: Outlook_1_7.Office.Item
               - name: LocalClientTime
                 uid: Outlook_1_7.Office.LocalClientTime
@@ -1919,11 +1917,11 @@ items:
                 uid: Outlook_1_7.Office.NotificationMessageDetails
               - name: NotificationMessages
                 uid: Outlook_1_7.Office.NotificationMessages
-              - name: Organizer
+              - name: 组织者
                 uid: Outlook_1_7.Office.Organizer
               - name: PhoneNumber
                 uid: Outlook_1_7.Office.PhoneNumber
-              - name: Recipients
+              - name: 收件人
                 uid: Outlook_1_7.Office.Recipients
               - name: 循环
                 uid: Outlook_1_7.Office.Recurrence
@@ -1945,7 +1943,7 @@ items:
                 uid: Outlook_1_7.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_7.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_7.Office.Time
               - name: UserProfile
                 uid: Outlook_1_7.Office.UserProfile
@@ -1980,7 +1978,7 @@ items:
                 uid: Outlook_1_6.Office.Body
               - name: CoercionTypeOptions
                 uid: Outlook_1_6.Office.CoercionTypeOptions
-              - name: 联系人
+              - name: Contact
                 uid: Outlook_1_6.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_6.Office.CustomProperties
@@ -1992,7 +1990,7 @@ items:
                 uid: Outlook_1_6.Office.EmailUser
               - name: 实体
                 uid: Outlook_1_6.Office.Entities
-              - name: Item
+              - name: 项目
                 uid: Outlook_1_6.Office.Item
               - name: LocalClientTime
                 uid: Outlook_1_6.Office.LocalClientTime
@@ -2012,7 +2010,7 @@ items:
                 uid: Outlook_1_6.Office.NotificationMessages
               - name: PhoneNumber
                 uid: Outlook_1_6.Office.PhoneNumber
-              - name: Recipients
+              - name: 收件人
                 uid: Outlook_1_6.Office.Recipients
               - name: ReplyFormAttachment
                 uid: Outlook_1_6.Office.ReplyFormAttachment
@@ -2026,7 +2024,7 @@ items:
                 uid: Outlook_1_6.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_6.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_6.Office.Time
               - name: UserProfile
                 uid: Outlook_1_6.Office.UserProfile
@@ -2061,7 +2059,7 @@ items:
                 uid: Outlook_1_5.Office.Body
               - name: CoercionTypeOptions
                 uid: Outlook_1_5.Office.CoercionTypeOptions
-              - name: 联系人
+              - name: Contact
                 uid: Outlook_1_5.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_5.Office.CustomProperties
@@ -2073,7 +2071,7 @@ items:
                 uid: Outlook_1_5.Office.EmailUser
               - name: 实体
                 uid: Outlook_1_5.Office.Entities
-              - name: Item
+              - name: 项目
                 uid: Outlook_1_5.Office.Item
               - name: LocalClientTime
                 uid: Outlook_1_5.Office.LocalClientTime
@@ -2093,7 +2091,7 @@ items:
                 uid: Outlook_1_5.Office.NotificationMessages
               - name: PhoneNumber
                 uid: Outlook_1_5.Office.PhoneNumber
-              - name: Recipients
+              - name: 收件人
                 uid: Outlook_1_5.Office.Recipients
               - name: ReplyFormAttachment
                 uid: Outlook_1_5.Office.ReplyFormAttachment
@@ -2107,7 +2105,7 @@ items:
                 uid: Outlook_1_5.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_5.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_5.Office.Time
               - name: UserProfile
                 uid: Outlook_1_5.Office.UserProfile
@@ -2142,7 +2140,7 @@ items:
                 uid: Outlook_1_4.Office.Body
               - name: CoercionTypeOptions
                 uid: Outlook_1_4.Office.CoercionTypeOptions
-              - name: 联系人
+              - name: Contact
                 uid: Outlook_1_4.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_4.Office.CustomProperties
@@ -2154,7 +2152,7 @@ items:
                 uid: Outlook_1_4.Office.EmailUser
               - name: 实体
                 uid: Outlook_1_4.Office.Entities
-              - name: Item
+              - name: 项目
                 uid: Outlook_1_4.Office.Item
               - name: LocalClientTime
                 uid: Outlook_1_4.Office.LocalClientTime
@@ -2174,7 +2172,7 @@ items:
                 uid: Outlook_1_4.Office.NotificationMessages
               - name: PhoneNumber
                 uid: Outlook_1_4.Office.PhoneNumber
-              - name: Recipients
+              - name: 收件人
                 uid: Outlook_1_4.Office.Recipients
               - name: ReplyFormAttachment
                 uid: Outlook_1_4.Office.ReplyFormAttachment
@@ -2188,7 +2186,7 @@ items:
                 uid: Outlook_1_4.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_4.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_4.Office.Time
               - name: UserProfile
                 uid: Outlook_1_4.Office.UserProfile
@@ -2223,7 +2221,7 @@ items:
                 uid: Outlook_1_3.Office.Body
               - name: CoercionTypeOptions
                 uid: Outlook_1_3.Office.CoercionTypeOptions
-              - name: 联系人
+              - name: Contact
                 uid: Outlook_1_3.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_3.Office.CustomProperties
@@ -2235,7 +2233,7 @@ items:
                 uid: Outlook_1_3.Office.EmailUser
               - name: 实体
                 uid: Outlook_1_3.Office.Entities
-              - name: Item
+              - name: 项目
                 uid: Outlook_1_3.Office.Item
               - name: LocalClientTime
                 uid: Outlook_1_3.Office.LocalClientTime
@@ -2255,7 +2253,7 @@ items:
                 uid: Outlook_1_3.Office.NotificationMessages
               - name: PhoneNumber
                 uid: Outlook_1_3.Office.PhoneNumber
-              - name: Recipients
+              - name: 收件人
                 uid: Outlook_1_3.Office.Recipients
               - name: ReplyFormAttachment
                 uid: Outlook_1_3.Office.ReplyFormAttachment
@@ -2269,7 +2267,7 @@ items:
                 uid: Outlook_1_3.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_3.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_3.Office.Time
               - name: UserProfile
                 uid: Outlook_1_3.Office.UserProfile
@@ -2300,7 +2298,7 @@ items:
                 uid: Outlook_1_2.Office.Body
               - name: CoercionTypeOptions
                 uid: Outlook_1_2.Office.CoercionTypeOptions
-              - name: 联系人
+              - name: Contact
                 uid: Outlook_1_2.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_2.Office.CustomProperties
@@ -2312,7 +2310,7 @@ items:
                 uid: Outlook_1_2.Office.EmailUser
               - name: 实体
                 uid: Outlook_1_2.Office.Entities
-              - name: Item
+              - name: 项目
                 uid: Outlook_1_2.Office.Item
               - name: LocalClientTime
                 uid: Outlook_1_2.Office.LocalClientTime
@@ -2328,7 +2326,7 @@ items:
                 uid: Outlook_1_2.Office.MessageRead
               - name: PhoneNumber
                 uid: Outlook_1_2.Office.PhoneNumber
-              - name: Recipients
+              - name: 收件人
                 uid: Outlook_1_2.Office.Recipients
               - name: ReplyFormAttachment
                 uid: Outlook_1_2.Office.ReplyFormAttachment
@@ -2342,7 +2340,7 @@ items:
                 uid: Outlook_1_2.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_2.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_2.Office.Time
               - name: UserProfile
                 uid: Outlook_1_2.Office.UserProfile
@@ -2373,7 +2371,7 @@ items:
                 uid: Outlook_1_1.Office.Body
               - name: CoercionTypeOptions
                 uid: Outlook_1_1.Office.CoercionTypeOptions
-              - name: 联系人
+              - name: Contact
                 uid: Outlook_1_1.Office.Contact
               - name: CustomProperties
                 uid: Outlook_1_1.Office.CustomProperties
@@ -2385,7 +2383,7 @@ items:
                 uid: Outlook_1_1.Office.EmailUser
               - name: 实体
                 uid: Outlook_1_1.Office.Entities
-              - name: Item
+              - name: 项目
                 uid: Outlook_1_1.Office.Item
               - name: LocalClientTime
                 uid: Outlook_1_1.Office.LocalClientTime
@@ -2401,7 +2399,7 @@ items:
                 uid: Outlook_1_1.Office.MessageRead
               - name: PhoneNumber
                 uid: Outlook_1_1.Office.PhoneNumber
-              - name: Recipients
+              - name: 收件人
                 uid: Outlook_1_1.Office.Recipients
               - name: ReplyFormAttachment
                 uid: Outlook_1_1.Office.ReplyFormAttachment
@@ -2415,7 +2413,7 @@ items:
                 uid: Outlook_1_1.Office.Subject
               - name: TaskSuggestion
                 uid: Outlook_1_1.Office.TaskSuggestion
-              - name: 时间
+              - name: Time
                 uid: Outlook_1_1.Office.Time
               - name: UserProfile
                 uid: Outlook_1_1.Office.UserProfile
